# esprite

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  firmware.yml  qemu.yml  release.yml
backends/qemu/: agent_link.cpp  agent_link.h  qemu_backend.cpp  qemu_backend.h  qemu_board.cpp  qemu_board.h  qemu_process.cpp  qemu_process.h  qmp.cpp  qmp.h  screendump.cpp  screendump.h
cli/: actions.cpp  actions.h  ble_bridge.cpp  ble_bridge.h  cli.cpp  cli.h  cli_internal.h  main.cpp  scenario.cpp  scenario.h
core/: backend.cpp  backend.h  runtime.cpp  runtime.h  target.cpp  target.h
docs/: integration.md  onboarding.md
firmwares/agentgauge/: CMakeLists.txt
firmwares/agentgauge/board_sim/: board_caps.cpp  board_init.cpp  display.cpp  input.cpp  power.cpp  touch.cpp
firmwares/clawdmeter/: CMakeLists.txt
firmwares/clawdmeter/board_sim/: ble.cpp  board_caps.cpp
firmwares/clawdmeter/buddy/: CMakeLists.txt
packaging/crate/: Cargo.toml  README.md
packaging/crate/src/: lib.rs
packaging/pypi/: pyproject.toml
packaging/pypi/src/esprite/: __init__.py
peripherals/ble/: sim_ble.cpp  sim_ble.h
peripherals/display/: framebuffer.cpp  framebuffer.h  screenshot.cpp  screenshot.h  sim_window.cpp  sim_window.h  window_layout.cpp  window_layout.h
peripherals/gfx/: Arduino_GFX_Library.h  arduino_gfx.cpp
peripherals/input/: sim_input.cpp  sim_input.h  sim_touch.h
peripherals/lvgl/: lv_conf.h  lvgl_display.cpp  lvgl_display.h  lvgl_snapshot.cpp  lvgl_snapshot.h
peripherals/tft_espi/: TFT_eSPI.h  tft_espi.cpp
scenarios/: agentgauge.json  clawdmeter.json  cyd.json  qemu_esp32c3_rgb.json  qemu_esp32c3_rgb_lvgl.json  sample_gfx.json  waveshare_amoled_18.json  waveshare_amoled_216_c6.json  waveshare_amoled_216_c6_buddy.json
shims/arduino/: Arduino.h  Print.h  Update.h  Wire.h  arduino_clock.cpp  serial.cpp
shims/esp/: Preferences.h  esp_heap_caps.h  esp_ota_ops.h  esp_system.h  esp_wifi.h  preferences.cpp
shims/net/: ESPmDNS.h  WebServer.h  WiFi.h  WiFiManager.h  webserver.cpp
targets/agentgauge/: CMakeLists.txt  board.cpp
targets/clawdmeter/: CMakeLists.txt  board.cpp
targets/clawdmeter/board_sim/: board_caps.cpp  board_init.cpp  display.cpp  imu.cpp  input.cpp  power.cpp  sound.cpp  touch.cpp
targets/cyd/: CMakeLists.txt  board.cpp  sketch.cpp
targets/cyd_tft/: CMakeLists.txt  board.cpp  sketch.cpp
targets/qemu/: esp32c3.json  esp32c3_rgb.json
targets/qemu_esp32c3/: CMakeLists.txt  board.cpp
targets/sample_gfx/: CMakeLists.txt  board.cpp  sketch.cpp
targets/waveshare_amoled_18/: CMakeLists.txt  board.cpp
targets/waveshare_amoled_216/: CMakeLists.txt  board.cpp
targets/waveshare_amoled_216_c6/: CMakeLists.txt  board.cpp
targets/waveshare_amoled_216_c6_buddy/: CMakeLists.txt  board.cpp
tests/: cli_test_helpers.h  itest_amoled18.cpp  itest_amoled216.cpp  itest_ble_oneshot.cpp  itest_buddy.cpp  itest_clawdmeter.cpp  itest_daemon.cpp  itest_main.cpp  itest_qemu.cpp  itest_sample_gfx.cpp  itest_scenario.cpp  itest_scenario_expect.cpp  itest_ui.cpp  test_agent_link.cpp  test_arduino.cpp  test_backend.cpp  test_ble.cpp  test_cli.cpp  test_daemon.cpp  test_framebuffer.cpp  test_gfx.cpp  test_heapcaps.cpp  test_lvgl_smoke.cpp  test_prefs.cpp  test_qemu_board.cpp  test_qemu_display_gating.cpp  test_qemu_process.cpp  test_qemu_screendump.cpp  test_qmp.cpp  test_scenario_steps.cpp  test_screenshot.cpp  test_serial.cpp  test_smoke.cpp  test_target.cpp  test_tft_espi.cpp  test_webserver.cpp  test_wifimanager.cpp  test_window_layout.cpp
tools/qemu/: build-fixtures.sh  build-lvgl-fixture.sh  build-rgb-fixture.sh  ci-deps.sh  fetch-qemu.sh
tools/qemu/arduino_tick/: arduino_tick.ino
tools/qemu/esp_lcd_touch_esprite/: CMakeLists.txt  esp_lcd_touch_esprite.c  idf_component.yml
tools/qemu/esp_lcd_touch_esprite/include/: esp_lcd_touch_esprite.h
tools/qemu/esprite_qemu_agent/: CMakeLists.txt  esprite_qemu_agent.c
tools/qemu/esprite_qemu_agent/include/: esprite_qemu_agent.h
tools/qemu/lvgl_demo/: CMakeLists.txt  sdkconfig.defaults
tools/qemu/lvgl_demo/main/: CMakeLists.txt  idf_component.yml  lvgl_demo.c
tools/qemu/rgb_demo/: CMakeLists.txt  sdkconfig.defaults
tools/qemu/rgb_demo/main/: CMakeLists.txt  idf_component.yml  probe_uart_gpio.c  rgb_demo.c  rgb_net.c
